# sudoku-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  package-lock.json  package.json  requirements.txt
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: export.py  health.py  solve.py  validate.py
backend/app/domain/: board.py  consecutive.py  regions.py
backend/app/pdf/: draw_edges.py  draw_grid.py  draw_metadata.py  draw_solution.py  layout.py
backend/app/schemas/: export.py  puzzle.py  solve.py  validation.py
backend/app/services/: export_service.py  solve_service.py  validation_service.py
backend/app/solver/: backtracking.py  constraints.py  enumerator.py
backend/sudoku_generator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py
docs/: EXP.md  PLAN.md
frontend/: index.html  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/domain/: puzzle.ts  validation.ts
frontend/src/features/editor/: EdgeToggleLayer.tsx  PuzzleSetupPanel.tsx  SudokuCell.tsx  SudokuGrid.tsx
frontend/src/features/export/: ExportPanel.tsx
frontend/src/features/language/: LanguageSwitcher.tsx
frontend/src/features/solve/: SolutionTabs.tsx  SolvePanel.tsx
frontend/src/i18n/: I18nContext.tsx  copy.ts  index.ts  language.ts
frontend/src/state/: puzzleStore.ts
frontend/src/styles/: layout.css  theme.css
