[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-generator-backend"
version = "0.1.0"
description = "FastAPI backend for the Sudoku Generator application"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "numpy>=2.1.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "reportlab>=4.2.0,<5.0.0",
  "uvicorn[standard]>=0.31.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
